<resources>
    <string name="app_name">Know Your Vote</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="state_select">Select the state you live in:</string>
    <string name="quote1">“Always vote for principle, though you may vote alone, and you may cherish the sweetest reflection that your vote is never lost.”
― John Quincy Adams </string>
    <string name="quote2">“They have the same point of view. The two parties are two factions of the business party. Most of the population doesn\'t even bother voting because it looks meaningless. They\'re marginalized and properly distracted. At least that\'s the goal.”
― Noam Chomsky</string>
    <string name="quote3">“There\'s no such thing as a vote that doesn\'t matter.”
― Barack Obama</string>
    <string name="quote4">“Elections belong to the people. It\'s their decision. If they decide to turn their back on the fire and burn their behinds, then they will just have to sit on their blisters.”
― Abraham Lincoln</string>
    <string name="reg_Alabama">VOTER REGISTRATION REQUIREMENTS: \n
    \n
    18 years of age or older \n
    Resident of Alabama \n
    Not convicted of a felony offense \n
    Not declared mentally incapacitated by a court \n
    \n
    VOTER REGISTRATION DEADLINE: \n
    \n
    You may register at any time.  The cut-off for registering to vote for a particular election is fifteen (15) days prior to Election Day.  If you register within the cut-off period prior to an election, then you will not be eligible to vote in that particular election, but you will be able to vote in any following elections. \n
    \n
    WHERE TO REGISTER TO VOTE: \n
    \n
    All Probate Tag Office Locations \n
    All City / County Library Branches \n
    All County Health Department Offices \n
    All County Agencies \n
    Board of Registrars Office \n
    Mail in an application \n
    Online at the Secretary of State\'s Website
    </string>
    <string name="reg_Alaska">VOTER REGISTRATION REQUIREMENTS: \n
    \n
    18 years of age or older. Also can register 90 days before 18th birthday. \n
    Not convicted of felony involving moral turpitude, unless voting right restored. \n
    Not registered to vote in another state. \n
    \n
    VOTER REGISTRATION DEADLINE: \n
    \n
    Can register at any time. The cut-off for registering to vote for a particular election is Thirty (30) days prior to Election day. must only be registered in one jurisdiction. If leave the state for an extended period of time with the intention to return. \n
    \n
    WHERE TO REGISTER TO VOTE: \n
    \n
    Municipal Clerk\'s Office \n
    Municipal Libraries \n
    Alaska DMV \n
    Division of Elections Office \n
    Online
    </string>
    <string name="reg_Arizona">VOTER REGISTRATION REQUIREMENTS: \n
    \n
    18 years of age or older. \n
    Not convicted of felony. \n
    Not adjudicated incapacitated by a court of law. \n
    Resident of Arizona and the county listed on registration. \n
    \n
    VOTER REGISTRATION DEADLINE: \n
    \n
    Can register at any time. The cut-off for registering to vote for a particular election is Twenty Nine (29) days prior to Election day. \n
    \n
    WHERE TO REGISTER TO VOTE: \n
    \n
    County Recorder\'s Office \n
    By mail \n
    Through the Address Confidentiality Program(for program members only) \n
    Online
    </string>
    <string name="reg_Arkansas">VOTER REGISTRATION REQUIREMENTS: \n
    \n
    18 years of age or older. \n
    Not convicted of felony. \n
    Not Adjudged as mentally incompetent by a court. \n
    Must provide last four of social security number or driver\'s license number / ID number or a current utility bill.
    \n
    VOTER REGISTRATION DEADLINE: \n
    \n
    Can register at any time. The cut-off for registering to vote for a particular election is Thirty (30) days prior to Election day. \n
    \n
    WHERE TO REGISTER TO VOTE: \n
    \n
    County Clerk\'s Office \n
    Public Libraries \n
    Arkansas DMV \n
    Division of Elections Office \n
    Military recruitment office. \n
    Mail \n
    Phone \n
    Online
    </string>
    <string name="reg_California">VOTER REGISTRATION REQUIREMENTS: \n
    \n
    18 years of age or older. Also can pre-register at 16 or 17 years old. \n
    Not currently is state of federal prison or on parole for the conviction of a felony. \n
    Not currently found mentally incompetent by a court. \n
    \n
    VOTER REGISTRATION DEADLINE: \n
    \n
    Can register at any time. The cut-off for registering to vote for a particular election is Fifteen (15) days prior to Election day. \n
    \n
    WHERE TO REGISTER TO VOTE: \n
    \n
    Government Offices \n
    Public Libraries \n
    California DMV \n
    Division of Elections Office \n
    Phone \n
    Online
    </string>
    <string name="reg_Colorado">VOTER REGISTRATION REQUIREMENTS: \n
    \n
    18 years of age or older. Also can pre-register at 16 or 17 years old. \n
    Provides a valid Colorado Driver’s License, Colorado ID card (Issued by the Department of Revenue) OR presents one of the acceptable forms of identification. \n
    A resident of the state of Colorado for at least 22 days. \n
    \n
    VOTER REGISTRATION DEADLINE: \n
    \n
    Can register at any time. The cut-off for registering to vote for a particular election is eighth (8) days prior to Election day or register in-person at a polling center the day of the election. \n
    \n
    WHERE TO REGISTER TO VOTE: \n
    \n
    Voter Registration Agency \n
    Mail \n
    Colorado DMV \n
    Online
    </string>
    <string name="reg_Connecticut">VOTER REGISTRATION REQUIREMENTS: \n
    \n
    Are you at least 17 and turning 18 before Election Day. \n
    Not convicted of a felony. \n
    A resident of the state of Connecticut. \n
    \n
    VOTER REGISTRATION DEADLINE: \n
    \n
    Your application must be postmarked or received by a voter registration agency by the 7th day before an election (OR you may register in person with your Registrar of Voters by the 7th day before an election). \n
    \n
    WHERE TO REGISTER TO VOTE: \n
    \n
    Voter Registration Office \n
    Mail \n
    Fax \n
    Online
    </string>
    <string name="reg_Delaware">VOTER REGISTRATION REQUIREMENTS: \n
    \n
    Must be 18 years of age by the date of the next General Election. \n
    Not convicted of a felony. \n
    Not adjudged mentally incompetent. \n
    Must be a resident of Delaware. \n
    \n
    VOTER REGISTRATION DEADLINE: \n
    \n
    Your application must be postmarked or received anytime except after the fourth Saturday before a Primary or General Election through the day of the election. \n
    \n
    WHERE TO REGISTER TO VOTE: \n
    \n
    Voter Registration Office \n
    Delaware DMV \n
    Mail \n
    Phone \n
    Online
    </string>
    <string name="reg_Florida">VOTER REGISTRATION REQUIREMENTS: \n
    \n
    Must be at least 18 years old to register (You may pre-register to vote if you are 16 years old). \n
    Not convicted of a felony. \n
    Not have been adjudicated mentally incapacitated with respect to voting in Florida or any other state without having the right to vote restored. \n
    Must be a resident of Florida. \n
    ID requirements for Voter Registration. \n
    \n
    VOTER REGISTRATION DEADLINE: \n
    \n
    The last day to register to vote is 29 days before an election. \n
    \n
    WHERE TO REGISTER TO VOTE: \n
    \n
    Any entity authorized by the Florida Fish and Wildlife Commission to issue permits for fishing, hunting or trapping. \n
    Public Library \n
    Mail \n
    Online
    </string>
    <string name="reg_Georgia">VOTER REGISTRATION REQUIREMENTS: \n
    \n
    At least 17 1/2 years old to register and 18 to vote. \n
    Must be a legal resident of the county in which you wish to vote. \n
    Not convicted of a felony. \n
    Not have been adjudicated mentally incapacitated. \n
    ID requirements for Voter Registration. \n
    \n
    VOTER REGISTRATION DEADLINE: \n
    \n
    The voter registration deadline is generally 28 days before the election. \n
    \n
    WHERE TO REGISTER TO VOTE: \n
    \n
    Election Office \n
    Mail \n
    fax \n
    Online
    </string>
    <string name="reg_Hawaii">VOTER REGISTRATION REQUIREMENTS: \n
    \n
    At least eighteen years of age Hawaii law allows qualified individuals to pre-register at sixteen years of age. Upon reaching eighteen years of age, they will be automatically registered. \n
    Not convicted of a felony. \n
    Not have been adjudicated mentally incapacitated. \n
    Must be a legal resident of the State of Hawaii. \n
    ID requirements for Voter Registration. \n
    \n
    VOTER REGISTRATION DEADLINE: \n
    \n
    The application for Voter Registration must be submitted 1 month before the election. But eligible voters can register and vote the day of the election. \n
    \n
    WHERE TO REGISTER TO VOTE: \n
    \n
    Election Office \n
    Public Libraries \n
    Post Office \n
    Most State Agencies \n
    City Halls \n
    Mail \n
    fax \n
    Online
    </string>
    <string name="reg_Idaho">VOTER REGISTRATION REQUIREMENTS: \n
    \n
     At least 18 years old on Election Day. \n
    Not convicted of a felony. \n
    Not have been adjudicated mentally incapacitated. \n
    Must be a resident of Idaho and the county for 30 days prior to election. \n
    ID requirements for Voter Registration. \n
    \n
    VOTER REGISTRATION DEADLINE: \n
    \n
    Every voter registering at an agency must be registered by the 25th day prior to an election. If you mail the registration card to your county clerk, the card must be postmarked 25 days prior to the election. You may register at the polls on election day by providing proof of residence. \n
    \n
    WHERE TO REGISTER TO VOTE: \n
    \n
    County Clerks Office \n
    Mail \n
    Online
    </string>
    <string name="reg_Illinois">VOTER REGISTRATION REQUIREMENTS: \n
    \n
     At least 18 years of age by election day; 17 years of age to vote in a General Primary Election if individual will be 18 by the General Election. \n
    Must have been a resident of the precinct for at least 30 days prior to election day. \n
    ID requirements for Voter Registration. \n
    \n
    VOTER REGISTRATION DEADLINE: \n
    \n
    Regular registration is open year round except during the 27-day period prior to an election and during the 2-day period after each election (1 day after in Chicago).
Registration during the grace period is only available “in person” at sites authorized by each election authority.
Online voter registration must be completed 16 days prior to the election. \n
    \n
    WHERE TO REGISTER TO VOTE: \n
    \n
    County Clerks Office \n
    Election Offices \n
    Schools \n
    Public Libraries \n
    Military Recruitment Offices \n
    Mail \n
    Fax \n
    Online
    </string>
    <string name="moreTitle">For More Information About Your Voting Rights Visit The Links Below:</string>
    <string name="btn1">U.S. Election Assistance Commission</string>
    <string name="btn2">Nonprofit Vote</string>
    <string name="spin">Spin</string>
    <string name="Title">Spin To See What Party To Vote For</string>
    <string name="pointerDes">pointer to select</string>
    <string name="wheelDes">Wheel for party selection</string>
    <string name="voter_game">Voter Game</string>
    <string name="more_information">More information</string>
    <string name="voter_information">Voter information</string>
    <string name="voter_registration_information">Voter Registration Information</string>
</resources>