<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_gravity="center"
        android:text="@string/moreTitle"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:background="@android:color/holo_red_dark"/>

    <Button
        android:id="@+id/eac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:background="@color/textBackGround"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/nonProfitVote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:background="@color/textBackGround"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:text="@string/btn2" />

</LinearLayout>