<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/Title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:background="@android:color/holo_red_dark" />

    <Button
        android:id="@+id/spinButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:layout_marginBottom="38dp"
        android:layout_marginStart="147dp"
        android:layout_marginEnd="189dp"
        android:text="@string/spin"
        android:textColor="@android:color/white"
        android:background="@color/textBackGround"/>

    <ImageView
        android:id="@+id/ic_partWheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="3dp"
        android:contentDescription="@string/wheelDes"
        app:srcCompat="@drawable/party_wheel" />

    <ImageView
        android:id="@+id/ic_pointer"
        android:layout_width="95dp"
        android:layout_height="93dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="167dp"
        android:layout_marginEnd="181dp"
        android:contentDescription="@string/pointerDes"
        app:srcCompat="@drawable/finger_point_up" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text=""
        android:textAlignment="center"
        android:background="@android:color/white"
        android:textSize="32sp" />

</RelativeLayout>